# proyecto-programacion-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: ArchivoInvalidoException.h  BuscadorEquipos.h  CalculadorPrioridad.h  CargarDatos.h  Equipo.h  EquipoComputo.h  EquipoLaboratorio.h  EquipoMedico.h  FormatoInvalidoException.h  GeneradorDatosPrueba.h  GeneradorReporte.h  Incidencia.h  Menu.h  OperacionInconsistenteException.h  OrdenadorEquipos.h  Simulador.h  SistemaMantenimiento.h
src/: BuscadorEquipos.cpp  CalculadorPrioridad.cpp  CargarDatos.cpp  Equipo.cpp  EquipoComputo.cpp  EquipoLaboratorio.cpp  EquipoMedico.cpp  GeneradorDatosPrueba.cpp  GeneradorReporte.cpp  Incidencia.cpp  Menu.cpp  OrdenarEquipos.cpp  Simulador.cpp  SistemaMantenimiento.cpp
